<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_textbook"
            android:icon="@drawable/ic_book_black_24dp"
            android:title="@string/menu_textbook"
            />

        <item
            android:id="@+id/nav_teachers_guide"
            android:icon="@drawable/ic_directions_black_24dp"
            android:title="@string/menu_teachers_guide"
            />
        <item
            android:id="@+id/nav_reference"
            android:icon="@drawable/ic_all_inclusive_black_24dp"
            android:title="@string/reference_books"
            />


        <item
            android:id="@+id/nav_tutorials"
            android:icon="@drawable/ic_show_chart_black_24dp"
            android:title="@string/tutorials"
            />

        <item
            android:id="@+id/nav_plasma"
            android:icon="@drawable/ic_airplay_black_24dp"
            android:title="@string/plasma"
            />

        <!--<item
            android:id="@+id/nav_teachers_guide"
            android:icon="@drawable/teachers_guide"
            android:title="@string/menu_teachers_guide" />-->
        <item
            android:id="@+id/nav_my_shortnotes"
            android:icon="@drawable/ic_note_black_24dp"
            android:title="@string/my_shortnote" />
        <item
            android:id="@+id/nav_shortnotes"
            android:icon="@drawable/ic_note_black_24dp"
            android:title="@string/menu_shortnote" />
        <item
            android:id="@+id/nav_entrance_exam"
            android:icon="@drawable/ic_school_black_24dp"
            android:title="@string/menu_entrance_exam" />
        <item
            android:id="@+id/nav_model_exam"
            android:icon="@drawable/ic_label_black_24dp"
            android:title="@string/menu_model_exam" />
        <item
            android:id="@+id/nav_worksheet"
            android:icon="@drawable/ic_work_black_24dp"
            android:title="@string/menu_worksheet" />

        <item
            android:id="@+id/nav_studytips"
            android:icon="@drawable/ic_add_box_black_24dp"
            android:title="@string/menu_studytips" />

        <item
            android:id="@+id/nav_adminInbox"
            android:icon="@drawable/ic_inbox_black_24dp"
            android:title="@string/menu_adminInbox" />

        <item
            android:id="@+id/nav_teachersInbox"
            android:icon="@drawable/ic_move_to_inbox_black_24dp"
            android:title="@string/menu_teachers_inbox" />

        <item
            android:id="@+id/nav_grades"
            android:icon="@drawable/ic_grade_black_24dp"
            android:title="@string/menu_grades" />

        <item
            android:id="@+id/nav_quiz"
            android:icon="@drawable/ic_grade_black_24dp"
            android:title="@string/menu_quiz" />

        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_fiber_new_black_24dp"
            android:title="@string/menu_news" />
    </group>

    <item android:title="Communicate">
        <menu>

            <item
                android:id="@+id/nav_telegram"
                android:icon="@drawable/ic_send_black_24dp"
                android:title="@string/telegram_group" />

            <item
                android:id="@+id/nav_telegram_channel"
                android:icon="@drawable/ic_send_black_24dp"
                android:title="@string/telegram_channel"
                />

            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/about_us"
                />

            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_contacts_black_24dp"
                android:title="@string/menu_send" />

            <item
                android:id="@+id/nav_web"
                android:icon="@drawable/ic_language_black_24dp"
                android:title="EP web" />
            <!--item
               android:id="@+id/nav_share"
               android:icon="@drawable/ic_menu_share"
               android:title="@string/menu_share" /-->
        </menu>
    </item>

</menu>
