<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.students.preparation.matric.students.modules.Students.fragment.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_textbook"
        android:name="com.students.preparation.matric.students.modules.Students.fragment.TextBookFragment"
        android:label="@string/menu_textbook"
        tools:layout="@layout/fragment_text_book" />
    <fragment
        android:id="@+id/nav_teachers_guide"
        android:name="com.students.preparation.matric.students.modules.Students.fragment.TeachersGuideFragment"
        android:label="@string/menu_teachers_guide"
        tools:layout="@layout/fragment_teachers_guide" />

    <fragment
        android:id="@+id/nav_reference"
        android:name="com.students.preparation.matric.students.modules.Students.fragment.ReferenceBooksFragment"
        android:label="@string/reference_books"
        tools:layout="@layout/fragment_reference_books"
        />

    <fragment
        android:id="@+id/nav_tutorials"
        android:name="com.students.preparation.matric.students.modules.Students.fragment.TutorialsFragment"
        android:label="@string/tutorials"
        tools:layout="@layout/fragment_tutorials"
        />
    <fragment
        android:id="@+id/nav_plasma"
        android:name="com.students.preparation.matric.students.modules.Students.fragment.PlasmaFragment"
        android:label="@string/plasma"
        tools:layout="@layout/fragment_plasma"
        />



    <fragment
        android:id="@+id/nav_my_shortnotes"
        android:name="com.students.preparation.matric.students.modules.Students.fragment.shortnotes.MyShortnotesFragment"
        android:label="@string/my_shortnote"
        tools:layout="@layout/fragment_shortnotes" />
    <fragment
        android:id="@+id/nav_shortnotes"
        android:name="com.students.preparation.matric.students.modules.Students.fragment.shortnotes.ShortNotesFragment"
        android:label="@string/menu_shortnote"
        tools:layout="@layout/fragment_shortnotes" />

    <fragment
        android:id="@+id/nav_entrance_exam"
        android:name="com.students.preparation.matric.students.modules.Students.fragment.EntranceExamFragment"
        android:label="@string/menu_entrance_exam"
        tools:layout="@layout/fragment_entrance_exam" />

    <fragment
        android:id="@+id/nav_model_exam"
        android:name="com.students.preparation.matric.students.modules.Students.fragment.EntranceExamFragment"
        android:label="@string/menu_model_exam"
        tools:layout="@layout/fragment_model_exam" />
    <fragment
        android:id="@+id/nav_worksheet"
        android:name="com.students.preparation.matric.students.modules.Students.fragment.WorkshitFragment"
        android:label="@string/menu_worksheet"
        tools:layout="@layout/fragment_workshit" />



    <fragment
        android:id="@+id/nav_studytips"
        android:name="com.students.preparation.matric.students.modules.Students.fragment.studytips.StudytipsFragment"
        android:label="@string/menu_studytips"
        tools:layout="@layout/fragment_studytips" />

    <fragment
        android:id="@+id/nav_adminInbox"
        android:name="com.students.preparation.matric.students.modules.Students.fragment.AminInboxFragment"
        android:label="@string/menu_adminInbox"
        tools:layout="@layout/fragment_amin_inbox" />

    <fragment
        android:id="@+id/nav_teachersInbox"
        android:name="com.students.preparation.matric.students.modules.Students.fragment.TeachersInboxFragment"
        android:label="@string/menu_teachers_inbox"
        tools:layout="@layout/fragment_text_book" />


    <fragment
        android:id="@+id/nav_grades"
        android:name="com.students.preparation.matric.students.modules.Students.fragment.GradesFragment"
        android:label="@string/menu_teachers"
        tools:layout="@layout/fragment_grades" />

    <fragment
        android:id="@+id/nav_quiz"
        android:name="com.students.preparation.matric.students.modules.Students.fragment.QuisFrament"
        android:label="@string/menu_teachers"
        tools:layout="@layout/fragment_quis_frament" />

    <fragment
        android:id="@+id/nav_news"
        android:name="com.students.preparation.matric.students.modules.Students.fragment.NewsFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/fragment_teachers" />

    <!--fragment
        android:id="@+id/nav_share"
        android:name="ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" /-->

    <fragment
         android:id="@+id/nav_telegram"
        android:name="com.students.preparation.matric.students.modules.Students.fragment.TelegramGroupFragment"
        android:label="@string/telegram_group"
        tools:layout="@layout/fragment_telegram_group"
        />

    <fragment
        android:id="@+id/nav_telegram_channel"
        android:name="com.students.preparation.matric.students.modules.Students.fragment.TelegramChannel"
        tools:layout="@layout/fragment_telegram_channel"
        android:label="@string/telegram_channel"
        />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.students.preparation.matric.students.modules.Students.fragment.AboutFragment"
        tools:layout="@layout/fragment_about"
        android:label="@string/about_us"
        />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.students.preparation.matric.students.modules.Home.contact.ContactFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/nav_web"
        android:name="com.students.preparation.matric.students.modules.Students.fragment.EPWebFragment"
        android:label="EP web"
        tools:layout="@layout/fragment_epweb" />
</navigation>