<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_below="@+id/appToolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_gravity="center"
                android:text="Find us. We are available at any time."
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>



            <Button
                android:id="@+id/contact_tg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/telegram"
                style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                android:text="@string/contact_tg"
                android:textColor="#000"
                android:drawableStart="@drawable/telegram" />
            <Button
                android:id="@+id/contact_email"
                android:layout_width="match_parent"
                android:drawableLeft="@drawable/email"
                style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:text="@string/contact_email"
                android:drawableStart="@drawable/email" />
            <Button
                android:id="@+id/contact_phone"
                style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                android:layout_width="match_parent"
                android:drawableLeft="@drawable/dial"
                android:layout_height="wrap_content"
                android:text="@string/contact_phone"
                android:textColor="#000"
                android:drawableStart="@drawable/dial" />

            <Button
                android:id="@+id/join_tg_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/tg"
                style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                android:text="@string/join_tg_group"
                android:textColor="#000"
                android:drawableStart="@drawable/tg" />
            <Button
                android:id="@+id/website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/tg"
                style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                android:text="Website"
                android:textColor="#000"
                android:drawableStart="@drawable/tg" />
            <Button
                android:id="@+id/join_tg_channel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/tg"
                style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                android:text="@string/join_tg_channel"
                android:textColor="#000"
                android:drawableStart="@drawable/tg" />

            <TextView
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:text="@string/special_thanks"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/araya"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textStyle="bold"
                android:textColor="@android:color/holo_green_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/getahun"
                android:textStyle="bold"
                android:textColor="@android:color/holo_green_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>